# chip8

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: chip.rs  cli.rs  clock.rs  instruction.rs  main.rs  rom.rs  time.rs
src/chip/: instruction.rs  mod.rs
