[package]
name = "chip8-emu"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = [ "derive" ] }
rand = "0.8.5"
winit = "0.27"
pixels = "0.9"
env_logger = "0.9"
log = "0.4"
hex_color = "2.0.0"

[features]
default = [ "superchip-bitshift", "bxnn" ]
superchip-bitshift = []
bxnn = []
store-load-modify-index = []
